--- a/TrainingTask/TrainingTask/Info.plist
+++ b/TrainingTask/TrainingTask/Info.plist
@@ -21,5 +21,12 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Gotham-Bold.otf</string>
+		<string>Gotham-Book.otf</string>
+		<string>Gotham-Medium-Regular.ttf</string>
+		<string>Gotham-Medium.otf</string>
+	</array>
 </dict>
 </plist>
